Version 0.9
 Logger: Create indices on tables when the tables are created
 obd2kml: Small table optimisations
 New tool: obdlogrepair. Small tool to fix any minor issues in logfile
 obdsim: Initial add of socket generator [for wifi obd devices]
 obd2csv: Take --start and --end time parameters
 obd2csv: add option to gzip csv file

Version 0.8 (released 2009-09-04)
 Put Copyright/GPL notices in all files
 Cosmetic build improvements
 obdsim: Add idle callback to generators
 obdsim: Messing with serial comms
 logger: Make newline configurable
 logger: Add timeout on database in case someone's scraping it
 obdsim: Initial add of fltk gui generator
 logger: Add option to daemonise
 obdsim: Add mode to all getvalue module calls
 logger: Catch SIGTERM to gracefully exit
 obdsim: Seed Random generator with passed seed
 manpage: describe obdsim seeds
 obd2csv,obd2kml,obdsim logger: Don't create the database file
 logger: adding some dbus methods

Version 0.7 (released 2009-06-25)
 Initial add of new module, obdsim
 obdsim plugins: dlopen, Logger, DBus, Random

Version 0.6 (released 2009-06-15)
 Move obdlogger source into its own subdir
 logger optimisation: remove all spaces in obd streams
 logger: add a serial port communications log
 logger: move capabilities into its own file, add features
 logger: Only create database columns, and only try to log, supported pids
 logger: add serial port logging option
 cmake: default gps dev [for ui] separately compile-time configurable
 logger: Dbus support, announce obd samples using SYSTEM dbus
 logger: reset elm device when we begin, and when we exit
 Add common "conf" library to read configuration common to all components

Version 0.5 (released 2009-05-22)
 Move common obdinfo into its own library
 add to obdinfo so programs can know units, max, min, etc
 obdgpslogger: Convert values returned from obd to actual numbers
 obdgpslogger: option to list supported PIDs in current OBD device