@@ -14,7 +14,7 @@ ENDIF("${CMAKE_SYSTEM}" MATCHES "Linux")
 PROJECT(OBDGPSLogger)
 
 SET(OBDGPSLOGGER_MAJOR_VERSION 0)
-SET(OBDGPSLOGGER_MINOR_VERSION 8)
+SET(OBDGPSLOGGER_MINOR_VERSION 9)
 
 ADD_DEFINITIONS("-DOBDGPSLOGGER_MAJOR_VERSION=${OBDGPSLOGGER_MAJOR_VERSION}")
 ADD_DEFINITIONS("-DOBDGPSLOGGER_MINOR_VERSION=${OBDGPSLOGGER_MINOR_VERSION}")
